# regie-son

./: .gitignore  CLAUDE.md  DOCUMENTATION.md  package-lock.json  package.json  vite.config.ts
.github/workflows/: release.yml
src/: App.css  App.tsx  friendlyError.test.ts  friendlyError.ts  keyBindings.ts  mime.test.ts  mime.ts  playerNav.test.ts  playerNav.ts  preflight.ts  types.ts  useAudioDurations.ts  usePlayer.ts  useRecentNumeros.ts  useRecentProjects.ts  useSettings.ts  useUpdater.ts  vite-env.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: archive.rs  cloud.rs  download.rs  file_assoc.rs  lib.rs  main.rs  show_mode.rs  types.rs
src/components/: AddAudioSourceModal.tsx  AddPartModal.tsx  AudioItem.tsx  AudioSettingsModal.tsx  CloudImportDialog.tsx  CloudShareDialog.tsx  ExportModal.tsx  HomePage.tsx  NumeroCard.tsx  OpenProjectModal.tsx  PauseTrack.tsx  PlayerBar.tsx  PreflightModal.tsx  ProjectEditor.tsx  SettingsModal.tsx  UpdateBanner.tsx
src/styles/: audio-item.css  base.css  buttons.css  editor.css  home.css  inputs.css  modal.css  numero.css  player.css  settings-modal.css
