[package]
name = "regie-son"
version = "0.1.0"
description = "Régie son pour spectacles cabaret"
authors = ["pcomble"]
edition = "2021"

[lib]
name = "regie_son_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4"] }
dirs = "6.0.0"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"] }
